:lipstick: fix vue dark mode style

--- a/snippets/react-css-module/src/signin/components/FormInput.module.scss
+++ b/snippets/react-css-module/src/signin/components/FormInput.module.scss
@@ -3,7 +3,7 @@
   height: var(--input-height);
 
   .input {
-    @apply font-light text-on-input px-3 py-0 w-full;
+    @apply font-light text-on-input px-3 py-0 w-full bg-transparent;
   }
 
   .icon {
