--- a/snippets/react-css-module/src/signin/components/SeparateLineWithText.module.scss
+++ b/snippets/react-css-module/src/signin/components/SeparateLineWithText.module.scss
@@ -2,7 +2,7 @@
   @apply relative block mb-8 w-40 mx-auto;
 
   hr {
-    @apply border border-background;
+    @apply border border-outline;
   }
 
   .text {
